build: modernize compilation and runtime for JDK9+
Split XPathFunctionsProvider into JDK8/JDK9+ multi-release variants
(piazza-commons uses javax.xml.xpath APIs that differ across JDK
versions), select the right one via Maven profiles keyed on JDK
version, and pass --add-exports/--add-opens flags to surefire so
tests run under newer JVMs.

Also replace removed-in-JDK9 sun.misc.BASE64Encoder/Decoder with
java.util.Base64 across corvus-wsclient and corvus-sfrm, and bump
maven-war-plugin since 2.6 doesn't run on newer JVMs.

Co-Authored-By: Claude Sonnet 5 <noreply@anthropic.com>